Update notebook with exploration of only the contexts

--- a/notebooks/ngrams_zeros.ipynb
+++ b/notebooks/ngrams_zeros.ipynb
@@ -31,13 +31,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "72ba284c",
+   "id": "5e022e26",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "17127507"
+       "(28, 28, 28, 28, 28)"
       ]
      },
      "execution_count": 3,
@@ -46,60 +46,48 @@
     }
    ],
    "source": [
-    "context_with_zeros = np.argwhere(character_n_gram.freq_array == 0)\n",
-    "context_with_zeros.shape[0]"
+    "freq_array = character_n_gram.freq_array\n",
+    "freq_array.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "f2fb4afb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(17210368,)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "character_n_gram.freq_array.reshape(-1).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "f8f797ab",
+   "execution_count": 7,
+   "id": "7f6859d8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LURX|Z\n",
-      "FN_J|X\n",
-      "GIKE|B\n",
-      "OLOJ|W\n",
-      "LDDY|M\n",
-      "JQ.W|I\n",
-      "VEJE|G\n",
-      "SBEB|G\n",
-      ".UXD|Q\n",
-      "MGSU|V\n"
+      "_AA_\n",
+      "_AAA\n",
+      "_AAC\n",
+      "_AAE\n",
+      "_AAF\n",
+      "_AAG\n",
+      "_AAH\n",
+      "_AAJ\n",
+      "_AAK\n",
+      "_AAO\n",
+      "_AAQ\n",
+      "_AAS\n",
+      "_AAT\n",
+      "_AAU\n",
+      "_AAV\n",
+      "_AAW\n",
+      "_AAX\n",
+      "_AAY\n",
+      "_AAZ\n",
+      "_AA.\n"
      ]
     }
    ],
    "source": [
-    "idx = np.random.randint(context_with_zeros.shape[0], size=10)\n",
-    "sample = context_with_zeros[idx]\n",
-    "for element in sample:\n",
-    "    context = \"\".join([util.idx_to_char(x) for x in element[:-1]])\n",
-    "    print(f\"{context}|{util.idx_to_char(element[-1])}\")"
+    "for context in range(28):\n",
+    "    if np.any(freq_array[0, 1, 1, context]) == False:\n",
+    "        context = \"\".join([util.idx_to_char(x) for x in [0, 1, 1, context]])\n",
+    "        print(context)"
    ]
   }
  ],
