--- a/notebooks/ngrams_zeros.ipynb
+++ b/notebooks/ngrams_zeros.ipynb
@@ -17,20 +17,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "16c75104",
    "metadata": {},
    "outputs": [],
    "source": [
     "freq_array = pd.read_csv(os.path.join(\"..\", config.RAW_NAMES_FILE_PATH))\n",
     "\n",
-    "character_n_gram = CharacterNGram(num_context=4)\n",
+    "character_n_gram = CharacterNGram(context_size=4)\n",
     "character_n_gram.fit(freq_array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "5e022e26",
    "metadata": {},
    "outputs": [
@@ -40,19 +40,19 @@
        "(28, 28, 28, 28, 28)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "freq_array = character_n_gram.freq_array\n",
+    "freq_array = character_n_gram.freq_arrays[0]\n",
     "freq_array.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7f6859d8",
    "metadata": {},
    "outputs": [
@@ -60,33 +60,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "_AA_\n",
-      "_AAA\n",
-      "_AAC\n",
-      "_AAE\n",
-      "_AAF\n",
-      "_AAG\n",
-      "_AAH\n",
-      "_AAJ\n",
-      "_AAK\n",
-      "_AAO\n",
-      "_AAQ\n",
-      "_AAS\n",
-      "_AAT\n",
-      "_AAU\n",
-      "_AAV\n",
-      "_AAW\n",
-      "_AAX\n",
-      "_AAY\n",
-      "_AAZ\n",
-      "_AA.\n"
+      "AAA_\n",
+      "AAAA\n",
+      "AAAB\n",
+      "AAAC\n",
+      "AAAD\n",
+      "AAAE\n",
+      "AAAF\n",
+      "AAAG\n",
+      "AAAH\n",
+      "AAAI\n",
+      "AAAJ\n",
+      "AAAK\n",
+      "AAAL\n",
+      "AAAM\n",
+      "AAAN\n",
+      "AAAO\n",
+      "AAAP\n",
+      "AAAQ\n",
+      "AAAR\n",
+      "AAAS\n",
+      "AAAT\n",
+      "AAAU\n",
+      "AAAV\n",
+      "AAAW\n",
+      "AAAX\n",
+      "AAAY\n",
+      "AAAZ\n",
+      "AAA.\n"
      ]
     }
    ],
    "source": [
     "for context in range(28):\n",
-    "    if np.any(freq_array[0, 1, 1, context]) == False:\n",
-    "        context = \"\".join([util.idx_to_char(x) for x in [0, 1, 1, context]])\n",
+    "    if np.any(freq_array[1, 1, 1, context]) == False:\n",
+    "        context = \"\".join([util.idx_to_char(x) for x in [1, 1, 1, context]])\n",
     "        print(context)"
    ]
   }
